tests/snapshots/snapshots__pipeline@vec_dim_arity.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/vec_dim_arity.pr
---
== tokens ==
VOpen Type UIdent("List") LParen Ident("a") RParen Eq UIdent("Nil") Bar UIdent("Cons") LParen Ident("a") Comma UIdent("List") LParen Ident("a") RParen RParen VSemi Type UIdent("Vec") LParen Ident("a") Comma Ident("n") Colon UIdent("Nat") RParen Eq UIdent("MkVec") LParen UIdent("List") LParen Ident("a") RParen RParen VSemi Fn Ident("demo") LParen Ident("x") Colon UIdent("Vec") LParen KwInt Comma Int(IntLit { value: 3, suffix: None }) Comma Int(IntLit { value: 4, suffix: None }) RParen RParen Colon KwInt Eq Int(IntLit { value: 0, suffix: None }) VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "List",
            params: [
                "a",
            ],
            param_kinds: [
                Type,
            ],
            ctors: [
                Ctor {
                    name: "Nil",
                    args: [],
                    fields: None,
                    span: 284..287,
                },
                Ctor {
                    name: "Cons",
                    args: [
                        Var(
                            "a",
                        ),
                        Con(
                            "List",
                            [
                                Var(
                                    "a",
                                ),
                            ],
                        ),
                    ],
                    fields: None,
                    span: 290..294,
                },
            ],
            deriving: [],
            newtype: false,
            span: 269..306,
        },
        DataDecl {
            name: "Vec",
            params: [
                "a",
                "n",
            ],
            param_kinds: [
                Type,
                Nat,
            ],
            ctors: [
                Ctor {
                    name: "MkVec",
                    args: [
                        Con(
                            "List",
                            [
                                Var(
                                    "a",
                                ),
                            ],
                        ),
                    ],
                    fields: None,
                    span: 331..336,
                },
            ],
            deriving: [],
            newtype: false,
            span: 308..345,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "demo",
            params: [
                Param {
                    name: "x",
                    ty: Some(
                        Con(
                            "Vec",
                            [
                                Int,
                                Nat(
                                    3,
                                ),
                                Nat(
                                    4,
                                ),
                            ],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Int(
                    IntLit {
                        value: 0,
                        suffix: None,
                    },
                ),
                span: 383..384,
            },
            wheres: [],
            span: 347..384,
        },
    ],
}

== types ==
[E1002] Type Error: in `demo`: `Vec` is applied to too many arguments: it takes 2, but 3 were given
   ╭─[ <source>:9:1 ]
   │
 9 │ fn demo(x : Vec(Int, 3, 4)) : Int = 0
   │ ──────────────────┬──────────────────  
   │                   ╰──────────────────── in `demo`: `Vec` is applied to too many arguments: it takes 2, but 3 were given
───╯
