tests/snapshots/snapshots__pipeline@vec_type_for_nat.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/vec_type_for_nat.pr
---
== tokens ==
VOpen Type UIdent("List") LParen Ident("a") RParen Eq UIdent("Nil") Bar UIdent("Cons") LParen Ident("a") Comma UIdent("List") LParen Ident("a") RParen RParen VSemi Type UIdent("Vec") LParen Ident("a") Comma Ident("n") Colon UIdent("Nat") RParen Eq UIdent("MkVec") LParen UIdent("List") LParen Ident("a") RParen RParen VSemi Fn Ident("demo") LParen Ident("x") Colon UIdent("Vec") LParen KwInt Comma KwBool RParen RParen Colon KwInt Eq Int(IntLit { value: 0, suffix: None }) VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "List",
            params: [
                "a",
            ],
            param_kinds: [
                Type,
            ],
            ctors: [
                Ctor {
                    name: "Nil",
                    args: [],
                    fields: None,
                    span: 290..293,
                },
                Ctor {
                    name: "Cons",
                    args: [
                        Var(
                            "a",
                        ),
                        Con(
                            "List",
                            [
                                Var(
                                    "a",
                                ),
                            ],
                        ),
                    ],
                    fields: None,
                    span: 296..300,
                },
            ],
            deriving: [],
            newtype: false,
            span: 275..312,
        },
        DataDecl {
            name: "Vec",
            params: [
                "a",
                "n",
            ],
            param_kinds: [
                Type,
                Nat,
            ],
            ctors: [
                Ctor {
                    name: "MkVec",
                    args: [
                        Con(
                            "List",
                            [
                                Var(
                                    "a",
                                ),
                            ],
                        ),
                    ],
                    fields: None,
                    span: 337..342,
                },
            ],
            deriving: [],
            newtype: false,
            span: 314..351,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "demo",
            params: [
                Param {
                    name: "x",
                    ty: Some(
                        Con(
                            "Vec",
                            [
                                Int,
                                Bool,
                            ],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Int(
                    IntLit {
                        value: 0,
                        suffix: None,
                    },
                ),
                span: 389..390,
            },
            wheres: [],
            span: 353..390,
        },
    ],
}

== types ==
[E1003] Type Error: in `demo`: kind mismatch: parameter 2 of `Vec` has kind `Nat`, but a `Type` was given
   ╭─[ <source>:9:1 ]
   │
 9 │ fn demo(x : Vec(Int, Bool)) : Int = 0
   │ ──────────────────┬──────────────────  
   │                   ╰──────────────────── in `demo`: kind mismatch: parameter 2 of `Vec` has kind `Nat`, but a `Type` was given
───╯
