tests/snapshots/snapshots__pipeline@vec_zip_mismatch.pr.snap
---
source: tests/snapshots.rs
expression: "normalize_pipeline_report(&prism::report(&src))"
input_file: tests/cases/vec_zip_mismatch.pr
---
== tokens ==
VOpen Type UIdent("List") LParen Ident("a") RParen Eq UIdent("Nil") Bar UIdent("Cons") LParen Ident("a") Comma UIdent("List") LParen Ident("a") RParen RParen VSemi Type UIdent("Vec") LParen Ident("a") Comma Ident("n") Colon UIdent("Nat") RParen Eq UIdent("MkVec") LParen UIdent("List") LParen Ident("a") RParen RParen VSemi Fn Ident("vzip") LParen Ident("u") Colon UIdent("Vec") LParen Ident("a") Comma Ident("n") RParen Comma Ident("v") Colon UIdent("Vec") LParen Ident("b") Comma Ident("n") RParen RParen Colon UIdent("Vec") LParen LParen Ident("a") Comma Ident("b") RParen Comma Ident("n") RParen Eq UIdent("MkVec") LParen LBracket RBracket RParen VSemi Fn Ident("demo") LParen Ident("v3") Colon UIdent("Vec") LParen KwInt Comma Int(IntLit { value: 3, suffix: None }) RParen Comma Ident("v4") Colon UIdent("Vec") LParen KwInt Comma Int(IntLit { value: 4, suffix: None }) RParen RParen Colon UIdent("Vec") LParen LParen KwInt Comma KwInt RParen Comma Int(IntLit { value: 3, suffix: None }) RParen Eq Ident("vzip") LParen Ident("v3") Comma Ident("v4") RParen VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "List",
            params: [
                "a",
            ],
            param_kinds: [
                Type,
            ],
            ctors: [
                Ctor {
                    name: "Nil",
                    args: [],
                    fields: None,
                    span: 315..318,
                },
                Ctor {
                    name: "Cons",
                    args: [
                        Var(
                            "a",
                        ),
                        Con(
                            "List",
                            [
                                Var(
                                    "a",
                                ),
                            ],
                        ),
                    ],
                    fields: None,
                    span: 321..325,
                },
            ],
            deriving: [],
            newtype: false,
            span: 300..337,
        },
        DataDecl {
            name: "Vec",
            params: [
                "a",
                "n",
            ],
            param_kinds: [
                Type,
                Nat,
            ],
            ctors: [
                Ctor {
                    name: "MkVec",
                    args: [
                        Con(
                            "List",
                            [
                                Var(
                                    "a",
                                ),
                            ],
                        ),
                    ],
                    fields: None,
                    span: 362..367,
                },
            ],
            deriving: [],
            newtype: false,
            span: 339..376,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "vzip",
            params: [
                Param {
                    name: "u",
                    ty: Some(
                        Con(
                            "Vec",
                            [
                                Var(
                                    "a",
                                ),
                                Var(
                                    "n",
                                ),
                            ],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
                Param {
                    name: "v",
                    ty: Some(
                        Con(
                            "Vec",
                            [
                                Var(
                                    "b",
                                ),
                                Var(
                                    "n",
                                ),
                            ],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Con(
                    "Vec",
                    [
                        Tuple(
                            [
                                Var(
                                    "a",
                                ),
                                Var(
                                    "b",
                                ),
                            ],
                        ),
                        Var(
                            "n",
                        ),
                    ],
                ),
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "MkVec",
                        ),
                        span: 435..440,
                    },
                    [
                        Spanned {
                            node: List(
                                [],
                            ),
                            span: 441..443,
                        },
                    ],
                ),
                span: 435..444,
            },
            wheres: [],
            span: 378..444,
        },
        Decl {
            name: "demo",
            params: [
                Param {
                    name: "v3",
                    ty: Some(
                        Con(
                            "Vec",
                            [
                                Int,
                                Nat(
                                    3,
                                ),
                            ],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
                Param {
                    name: "v4",
                    ty: Some(
                        Con(
                            "Vec",
                            [
                                Int,
                                Nat(
                                    4,
                                ),
                            ],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Con(
                    "Vec",
                    [
                        Tuple(
                            [
                                Int,
                                Int,
                            ],
                        ),
                        Nat(
                            3,
                        ),
                    ],
                ),
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "vzip",
                        ),
                        span: 513..517,
                    },
                    [
                        Spanned {
                            node: Var(
                                "v3",
                            ),
                            span: 518..520,
                        },
                        Spanned {
                            node: Var(
                                "v4",
                            ),
                            span: 522..524,
                        },
                    ],
                ),
                span: 513..525,
            },
            wheres: [],
            span: 446..525,
        },
    ],
}

== types ==
[E1998] Type Error: in `demo`: length mismatch: expected length 3, but got length 4
    ╭─[ <source>:11:77 ]
    │
 11 │ fn demo(v3 : Vec(Int, 3), v4 : Vec(Int, 4)) : Vec((Int, Int), 3) = vzip(v3, v4)
    │                                                                             ─┬  
    │                                                                              ╰── in `demo`: length mismatch: expected length 3, but got length 4
────╯
